[gd_scene load_steps=13 format=4 uid="uid://cjvmrmsnpnmr7"]

[ext_resource type="Script" uid="uid://3a3dj7jwmg1h" path="res://Scripts/car.gd" id="1_6koi8"]
[ext_resource type="Curve" uid="uid://5g6u1nsi76jj" path="res://Curves/car_accel_DEFAULT.tres" id="2_ey22k"]
[ext_resource type="Curve" uid="uid://cyotwoow5k0sd" path="res://Curves/car_handling_DEFAULT.tres" id="3_ebsho"]
[ext_resource type="Texture2D" uid="uid://yq4f002l0ypj" path="res://Models/mach1_car_texture.png" id="4_ebsho"]
[ext_resource type="PackedScene" uid="uid://c3jvm2ogc8nle" path="res://Scenes/wheel_NEW.tscn" id="4_ufams"]
[ext_resource type="Curve" uid="uid://bf4pfkrg0qanw" path="res://Curves/car_tire_FRONT.tres" id="5_6koi8"]
[ext_resource type="Script" uid="uid://b8fh3q6k6l28l" path="res://Scripts/car_follow_camera.gd" id="7_ebsho"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7gqng"]
resource_name = "Base"
cull_mode = 2
shading_mode = 2
albedo_texture = ExtResource("4_ebsho")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_c3cc7"]
_surfaces = [{
"aabb": AABB(-0.9141756, -0.4522409, -1.8030428, 1.8283513, 1.0643916, 3.6153378),
"format": 34896613377,
"index_count": 816,
"index_data": PackedByteArray("SgAgAEsAIAAzAEsASgAaACAAIABMADMAGgBMACAATAAfADMANQAaAEoAGgBNAEwASwAzAE4ANQBPABoATwBNABoATQBQAEwATABQAB8ATwAtAE0ATQAuAFAALQAuAE0AJAAtAE8ALgAYAFAAUQAkAE8AUQBPADUAJAAAAC0AUQAAACQALQBSAC4AAABSAC0AUgAXAC4ALgAXABgAAAA4AFIAUQBTAAAAUwA4AAAAVABTAFEAVABRADUAUgBVABcAOABVAFIAVQAqABcAUwBWADgAOABXAFUAVgBXADgAVwBYAFUAVQBYACoAVgABAFcAWQBWAFMAVABZAFMAWQBaAFYAWgABAFYAVwBbAFgAAQBbAFcAWwAJAFgAWgBEAAEAAQBcAFsARABcAAEAXABFAFsAWwBFAAkARABdAFwAXABeAEUAXQBeAFwAWAAJACkAWAApACoARQBHAAkAXgBGAEUARQBGAEcACQAmACkACQBHACYAKgApABQAKQAmACcAKQAnABQAKgAUABUAFwAqABUAFwAVABgAFQAUACsAFAAnACgAFAAoACsAFQArABYAGAAVABYAGAAWAC8AUAAYAC8AUAAvAB8ALwAWABkAFgArABMAFgATABkAKwAsABMAKwAoACwAHwAvADAALwAZADAAHwAwADIAMwAfADIAMwAyAE4ANAAyADAAMQAwABkANAAwADEAMQAZABsAGwAZABMAXwBOADIAXwAyADQAGwATAGAAYAATACwAHQAxABsAHAAbAGAAHQAbABwAYQA0ADEAYQAxAB0AYgBfADQAYgA0AGEAIQBfAGIAIQBjAF8AYwBOAF8AYwBkAE4ASwBOAGQAZQBLAGQAZQBkAGMAZQBKAEsAZgBjACEAZQBjAGYAZwBKAGUAZwBlAGYAZwA1AEoAVAA1AGcAZwBmAGgAVABnAGgAZgAhACIAaABmACIAIgAhAGIAIgBiAGkAaQBiAGEAaAAiADYANgAiAGkAVABoAGoAagBoADYAagA2ACMAVABqAGsAVABrAFkAagAjACUAagAlAGsAIwA2ADcANgBpADcAIwA3ACUAWQBrAGwAWQBsAFoAawAlADkAawA5AGwAJQA3AG0AJQBtADkANwBpAG4ANwBuAG0AaQBhAG4AbgBhAB0AbgAdAB4AbQBuAB4AHgAdABwAOQBtAG8AbQAeAG8AOQBvAHAAbAA5AHAAbwAeADoAHgAcADoAcABvAHEAbwA6AHEAbABwAHIAWgBsAHIAWgByAEQAcgBwAHMAcABxAHMARAByAHQAcgBzAHQARAB0AF0AcwBxAA8AdABzAEAAcwAPAEAAXQB0AHUAdABAAHUAXQB1AEMAXQBDAF4AcQA7AA8AcQA6ADsAQAAPAD4AQwB2AF4AXgB2AEYAOgAQADsAOgAcABAAHABgABAADwA7AD0ADwA9AD4AOwAQADwAOwA8AD0AEABgAHcAEAB3ADwAYAAsAHcAdwAsAHgAKAB4ACwAPAB3AHkAdwB4AHkAPQA8AHoAPAB5AHoAPQB6AD8APgA9AD8APwB6AA0AKAB7AHgAJwB7ACgAeQB4ABEAewARAHgAegB5AHwAegB8AA0AeQARAHwAPwANAA4ADgANAHwADAA/AA4APgA/AAwADgB8AH0AfQB8ABEADAAOAAsACwAOAH0AQQA+AAwAQAA+AEEAdQBAAEEAQQAMAAQABAAMAAsAdQBBAH4AfgBBAAQAQwB1AH4AQwB+AH8AQwB/AHYAfgAEAEIAfwB+AEIABAALAAYAQgAEAAYABgALAIAACwB9AIAAQgAGAIEABgCAAIEAfwBCAAMAAwBCAIEAfwADAEgAfwBIAHYAAwCBAIIAgQCAAIMAgQCDAIIAAwCCAEkAAwBJAEgASQCCAIMAdgBIAAIAdgACAEYASABJAAUASAAFAAIASQCDAIQABQBJAIQAgACFAIMAhACDAIUAgAB9AIUAfQARAIUAhACFAIYAhgCFABEABQCEAAcABwCEAIYAAgAFAAcAhgARAIcAewCHABEABwCGAAoACgCGAIcAAgAHAAgACAAHAAoARgACAAgARgAIAEcARwAIAIgACAAKAIgARwCIACYACgCHABIAiAAKABIAiQASAIcAiAASAIkAJgCIAIkAiQCHAHsAJgCJACcAJwCJAHsA"),
"lods": [0.10728674, PackedByteArray("JgASACcAJwASACgAJgAKABIACgARABIAKAASABEAFAAnACgAKQAmACcAKQAnABQACQAmACkAKgApABQACQApACoAFAAoACsAKgAUABUAFQAUACsAKwAoACwAKAARACwAFQArABYAKwAsABMAFgArABMAEAATACwAGAAVABYAFwAqABUAFwAVABgALQAqABcALQAJACoALgAXABgALQAXAC4AGAAWAC8AFgATABkALwAWABkAGwAZABMAGwATABAALwAZADAAMQAZABsAMQAwABkAHwAvADAAGAAvAB8AHwAwADIAIAAYAB8ALgAYACAAMwAfADIAIAAfADMANAAyADAANAAwADEANAAzADIAHQA0ADEAHQAxABsAIQAzADQAIQAgADMAIQA0AB0AGgAuACAAGgAgACEAGgAtAC4AHQAbABwANQAaACEAHAAbABAAJAAaADUAJAAtABoANQAhADYAJAA1ADYAIgAhAB0ANgAhACIAHgAdABwAIgAdAB4AJAAAAC0ANgAiADcANwAiAB4AJAA2ACMAIwA2ADcAJAAjACUAJAAlAAAAIwA3ACUAAAA4AC0AJQA4AAAAOAAJAC0AJQA3ADkAJQA5ADgAOQA3AA8ANwAeADoAHgAcADoANwA6AA8AOgAcABAAOgAQADsADwA6ADsAOwAQADwAEAAsADwAPAAsABEAOwA8AD0ADwA7AD0APAARAA0APQA8AA0ADwA9AD4ADQARAAcABwARAAoAPQANAD8APgA9AD8APwANAA4AQAAPAD4AOQAPAEAAPgA/AAwADAA/AA4ACwAOAA0ADAAOAAsACwANAAcAQQA+AAwAQAA+AEEABAAMAAsAQQAMAAQABAALAAYABgALAAcAQQAEAEIAQgAEAAYAAwBBAEIAAwBCAAYAQwBAAEEAQwBBAAMARABAAEMARAA5AEAAOAA5AEQAOABEAAEARABFAAEAAQBFADgARABDAEUAOABFAAkAQwADAEYAQwBGAEUARQBHAAkARQBGAEcACQBHACYARwAIACYARgAIAEcACAAKACYACAAHAAoARgACAAgAAgAHAAgAAgAFAAcARgBIAAIASAAFAAIAAwBIAEYABQBJAAcASABJAAUAAwBJAEgABgAHAEkAAwAGAEkA"), 0.5137071, PackedByteArray("AAABAAIAAQADAAIAAQAEAAMAAwAFAAIAAwAGAAUAAwAEAAYAAgAFAAcABgAHAAUAAgAHAAgAAgAIAAkAAgAJAAAACAAHAAoACQAIAAoABgALAAcABAALAAYABAAMAAsACwANAAcADAAOAAsACwAOAA0ADwAOAAwABAAPAAwADgAQAA0ADwAQAA4ADQARAAcABwARAAoAEAARAA0ACgARABIACQAKABIAEgARABMAEAATABEACQASABQAFAASABMACQAUABUAFgAUABMAFQAUABYAFwAJABUAAAAJABcAGAAVABYAFwAVABgAFgATABkAGAAWABkAGgAXABgAAAAXABoAGwAZABMAGwATABAAHAAbABAAHQAZABsAHQAbABwAHgAcABAAHgAdABwADwAeABAAHQAfABkAGAAZAB8AIAAYAB8AGgAYACAAIQAfAB0AIQAgAB8AHgAhAB0AGgAgACEADwAiAB4AIgAhAB4AIwAhACIAIwAiAA8AGgAhACMAJAAaACMAJAAAABoAIwAPACUAJAAjACUAJAAlAAAAJQAPAAQAAAAlAAEAAQAlAAQA")],
"name": "Base",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 138,
"vertex_data": PackedByteArray("U/VzLxkOAAAEzlwHVkoAAAX2iSSz6gAA/3/2HNbxAAD5CYkks+oAAFr5+T///wAApAb5P///AABO+iJPVv0AAAj/BlVc6wAATv92ZbebAACj+KFoOf4AALAFIk9W/QAA9gAGVVzrAAAFCSGCHP8AAFsHoWg5/gAAsAB2ZbebAABtH4epq5sAAP9/IYIc/wAA+fYhghz/AAD/fyCvDaIAAJHgh6mrmwAA5tcI7fuCAACDzpf0OoQAAB30FKWHUwAACdZ79dxTAAD/f4T5TYgAAFjy95CTAAAAezGX9DqEAAAYKAjt+4IAAPUpe/XcUwAA4QsUpYdTAABDzdPdzyoAAHHg8bgnAQAAjR/xuCcBAACmDfeQkwAAAO4LEUQ8AwAAEPQRRDwDAACrCnMvGQ4AAPL/d4Q/1QAAq/FAqbTVAAAI12yimdUAAK7zmoP+mwAAJfDWmRF/AADn0QWospwAAP9/L6Q/1QAAQfmwaB4PAACr8x+ktyYAAEPKYv3cUwAA/3///9xTAAC7NWL93FMAAP9/093PKgAA9ckCzPMPAAC7MtPdzyoAAKjP/WgAAAAA1wrQawAAAAC9BrBoHg8AAAX29hw7IgAA+Qn2HDsiAADZD9aZEX8AAFAMmoP+mwAAUw5AqbTVAAAMAHeEP9UAAPYAYV0/1QAAAADNdfDrAAD5CVwHHZsAAPkJIBQ/1QAAoSX2HNbxAAD/fwAAHZsAAP9/XAdWSgAABfZcBx2bAAAF9iAUP9UAAAj/YV0/1QAAXdr2HNbxAADq3Pk///8AAM3L95CTAAAAMcvxuCcBAADU3k7F8w8AACX30pXzDwAA/38CzPMPAAAn9dBrAAAAAOjZe9gMKgAAZdIRRDwDAAAI/+ZmHCMAAJLQcy8ZDgAA/38RRDwDAAAI//ZlDksAAATO9hw7IgAABfZcB1ZKAAAI/1dj1X0AAP9/cy8ZDgAA/3/2HDsiAAAF9lwHmX0AAF3aXAeZfQAA/38AAJl9AABd2lwHHZsAAAk2AszzDwAAFy4FqLKcAAAWJnvYDCoAACohTsXzDwAAzTTxuCcBAAD/f/G4JwEAAP9/95CTAAAAMTT3kJMAAAD/f/1oAAAAAFYw/WgAAAAA2QjSlfMPAACZLRFEPAMAAGwvcy8ZDgAA+jH2HDsiAAD2AOZmHCMAAFMMH6S3JgAA9gD2ZQ5LAAD5CVwHVkoAAPYAV2PVfQAA+jFcB1ZKAAD5CVwHmX0AAKElXAeZfQAAoSVcBx2bAABd2iAUP9UAAPYobKKZ1QAA/38ukYTsAAB2JK2PhOwAAHMIlJaE7AAAiNutj4TsAADmJCGCHP8AAKAjoWg5/gAAoSUgFD/VAAD/f8MMP9UAAFkiIk9W/QAAFCP5P///AAD/f/k///8AAP9/Ik9W/QAApd0iT1b9AAD/f6FoOf4AAF7coWg5/gAAGNshghz/AAD//8118OsAAIv3lJaE7AAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_s3wfk"]
resource_name = "mach1_Cube_001"
_surfaces = [{
"aabb": AABB(-0.9141756, -0.4522409, -1.8030428, 1.8283513, 1.0643916, 3.6153378),
"attribute_data": PackedByteArray("SHIz8Xdix7ZPcXAUCEOyFEhyM/Hjccz743HM+09xcBQIQ7IUCEOyFJ5y0waectMG4icYqys5E30mO7+qXSN++wot6voMGSRlhykoZdYfzQT8GakFFQ1i7lAV8hddI3770BHp+CEUhQbaCKgRthDxAwwZJGUUocWbFKkN/B57b6GAemH7WplThR57b6GAetmIFKHFmySdIoTonIJWgHrZiPSWzS1amVOFz6IjBs+iIwYknSKEWplTheicglaAetmIWplThVqZU4UknSKE7bxFlimxO8YLt+yWKbGUlymxlJftvEWWC7fsluInGKsKLer6Jju/ql0jfvsrORN9hykoZQwZJGVdI3770BHp+BUNYu78GakF1h/NBFAV8hchFIUG2gioEbYQ8QMMGSRl+b+klu28RZb5v6SW7bxFlhShxZuAemH7FKkN/B57b6FamVOFHntvoRShxZuAetmIJJ0ihOvLofspse/zOLr0+ji69Popse/z68uh+xQgYi3pKO0sSCDcZHQl5YCtJ4fW+hlo7a0nh9YUIGItSCDcZDcXYS3YBl0tNxdhLfEDtWXaCN/a+hlo7XdmgBR4Z+MGd2aAFHFxHTB3ZoAUbkOlaLlxaWjfQ/O2aHKh3d9D87ZocqHduXFpaG5DpWhxcR0wd2aAFEfDWe2iwg38V5utnJp6/dKxnM/TCKcZ1JOZcBQBfGkt9JbNLRd7ElYymHpWMph6VjKYelYymHpWF3sSVgF8aS1Xm62c+b/Lob0cZBcUIGIt6SjtLEgg3GR0JeWA+hlo7dIaDfxIINxkFCBiLTcXYS29HGQX2AZdLTcXYS3xA7Vl2gjf2voZaO2aev3SCKcZ1Di61+spsZrrOLodzimxHc4psZrrR8Mdzji61+tHw1ntvRxkF3kk0hZ3ZoAUT3FwFHhn4wa5YrfdJnKwtmhyod0hROPdd2LHtrlit90mcrC2aHKh3a0nh9ZtNEbTd2LHtuFxA4UmcrC2CWcShblxaWjhZnho4icYqys5E30mO7+qdCXlgIcpKGVIINxkmWYsMHFxHTB3ZoAUFCBiLXkk0hbpKO0svRxkF1AV8hfaCKgR8QNQggwZJGWSGBuC8QO1ZfED/7OSGBuCKxlRs/EDUILaCN/aKxlRs2IZCdrxA/+z68tt7qLCDfxHw1ntYhkJ2lAkmextNEbT5y+T7N9jSPFIcjPxuWK33UdEdfEhROPduWK33d9jSPFIcjPxNxdhLdgGXS3hZnhomWYsMLBk3/vfY0jxYUQN/EdEdfHfY0jxsGTf++cvk+xQJJns+hlo7dIaDfwVDWLufpoEBp98BRQOfZcFfpoEBpOZcBSaev3SsZzP05OZcBSffAUUk5lwFO28O8btvIKh+b87xvm/y6HtvIKhjHpx6Wae8+kymHpWF3sSVvSWzS1mnvPpjHpx6Sme5fsLtwKiKbGCou28gqELtzvG7bw7xu28gqELtwKiKbGCotIaDfxQJJns+hlo7QwZJGWtJ4fWUCSZ7GIZCdo3F2EtvRxkFxQgYi1QFfIXkhgbgkgg3GR0JeWAKxlRs3Ql5YDiJxirkhgbgmIZCdriJxirKxlRs1AV8hf8GakFvRxkFyEUhQZHw1ntOLr0+ji61+uiwg38R6kk6ime5ftmnvPpU5/gLTKYelb0ls0t6JyCVlebrZxamVOFCKcZ1Gae8+mxnM/TR6kk6tWhhhT0ls0tk5lwFFOf4C2xnM/TV5utnJOZcBR+mgQG1aGGFJlmLDDhZnhoJkNZMOvLHc5Hw1ntR8MdzuvLbe5Hw1nt68tt7iZDWTCZZiwwlkM/heFmeGgJZxKFbkOlaAlnEoV3Yse2lkM/hQhDFwd4Z+MGvRxkF3kk0hZ3ZoAUeGfjBk9xcBStJ4fWbTRG03dix7bhcQOFCWcShSZysLa5cWlo4WZ4aOInGKsrORN9dCXlgCY7v6qHKShlSCDcZJlmLDB3ZoAUcXEdMBQgYi15JNIW6SjtLFAV8hfaCKgR8QNQggwZJGXxA7VlkhgbgvED/7OSGBuC8QNQgisZUbPaCN/aKxlRs/ED/7NiGQna68tt7qLCDfxHw1ntYhkJ2lAkmextNEbTrSeH1ucvk+w3F2Et2AZdLeFmeGiZZiww5y+T7FAkmez6GWjtFQ1i7tIaDfxXm62cmnr90rGcz9OxnM/TjHpx6Wae8+lXm62cMph6Vhd7Elb0ls0tAXxpLWae8+kpnuX7jHpx6VAkmez6GWjtDBkkZa0nh9ZiGQnaUCSZ7DcXYS29HGQXUBXyFxQgYi2SGBuCSCDcZHQl5YArGVGzdCXlgJIYG4LiJxirYhkJ2uInGKsrGVGzrSeH1lAV8hf8GakFIRSFBkfDWe04uvT6OLrX60epJOopnuX7Zp7z6VOf4C0ymHpW9JbNLeicglZXm62cWplThQinGdRmnvPpR6kk6rGcz9PVoYYU9JbNLVOf4C2TmXAUsZzP01ebrZyTmXAU1aGGFH6aBAaZZiwwJkNZMOFmeGgmQ1kwmWYsMJZDP4XhZnhobkOlaAlnEoXfQ/O2CWcShZZDP4V3Yse2"),
"format": 34896613399,
"index_count": 816,
"index_data": PackedByteArray("oABcAKEAoABbAFwAogCgAKEAogChAKMAogCjAKQApQCgAKIApQB8AKAAogCkAKYApQCiAKYApQCmAKcApgCkAFkApgBZAFoAqAATAKkAqAAUABMAqgAKAKsAqgCsAAoArQCuAK8ArQABAK4AsAABAK0AsAB2AAEAsACxAHYAsACyALEAsgCzALEAsgC0ALMAtQAOALYAtQAMAA4AtwC4ALkAtwC6ALgAugC7ALgAugC8ALsAvQC+AL8AvQDAAL4AYQDBAA0AYQDCAMEAwwACAMQAwwDFAAIAxgDHAMgAxgDJAMcAaADKAGkAaADLAMoAzADNAM4AzADPAM0A0ADRANIA0ADTANEA1ADVANYA1ADXANUAGgAZABYAGgAbABkA2ADZANoA2ABdANkAFQDbAGwAFQBrANsA3ADdAN4A3ABiAN0A3wB1AOAA3wDhAHUA4gDhAN8A4gDjAOEA4gDkAOMA4gDlAOQA5QB3AOQA5QDmAHcAagDnABwAagDoAOcAYABfABIAYABeAF8A6QBwAHMA6QDqAHAA6wAAAAUA6wDsAAAA7QDsAOsA7QDuAOwA7QDvAO4A7QDwAO8A8AAEAO8A8AAGAAQADwDxABAADwDyAPEAGADzAPQAGAD1APMA9gD3APgA9gCCAPcA+QD4APcA+QD3APoAfgD7AB8AfgD8APsA/QCDAP4A/QAoAIMA/wD+AIMA/wCDAIQAjQAAAQEBTQCNAAEBTQABAUwAjQACAQABAwEAAQIBAwEEAQABSwAEAQMBSwBOAAQBgAAFAX8AgAAGAQUBIQAiACMAIQCMACIABwEnAAgBBwEpACcACQGKAIsACQGJAIoACgEgAAsBCgEMASAADQE0AA4BNQAOATYANQANAQ4BMwANATUAMwAPAQ0BDwEQAQ0BDQEQATQADwERARABEgEQAREBEwE0ABABEgETARABOAATARIBEwEUATQAOAA5ABMBOQAUARMBOQA3ABQBFQEWARcAFQEXARYBGAFlAGYAGAFnAGUAYwAZARoBYwAbARkBHAEdAR4BHAEfAR0BIAEhASIBIAERACEBIwEkASUBIwEmASQBJwEoAWQAJwEpASgBKgErASwBKgEtASsBLgEvATABLgExAS8BMgEzATQBMgEeADMBNQE2ATcBNQEmADYBOAEtAIgAOAEsAC0AJQA5AToBJQAkADkBOwE8AT0BOwE+ATwBPwFAAUEBPwFCAUABHQBDAUQBHQCBAEMBKgBFAUYBKgBHAUUBcgBIAUkBcgBKAUgBSwFMAU0BSwFOAUwBSwFNAU8BSwFPAVABUQFxAFIBUQEDAHEAUwFUAVUBUwFWAVQBdABXAVgBdABZAVcBCQBuAG0ACQBaAW4ACQBbAVoBCQBvAFsBXAFFAEQAXAFdAUUAXgELAF8BXgFgAQsAYQE8ADoAYQFiATwAYwFkAWUBYwFmAWQBZQFkAWcBZQFnAWgBaQFqAWsBaQFsAWoBkgBtAW4BkgA+AG0BbwEHAHABbwFxAQcAcgFzAY4AcgF0AXMBmQB1AXYBmQCaAHUBdwF4AXkBdwF6AXgBewF8AX0BewF+AXwBfwGAAYEBfwGCAYABSABHAEkASABGAEcAgwGEAVgAgwGFAYQBQwCGAZwAQwCdAIYBhwGIAYkBhwGKAYgBmwCLAYwBmwBKAIsBkQCQAI8AkQA/AJAAjQF6AI4BjQF4AHoAPQCPAZABPQA7AI8BQgCRAZIBQgCTAZEBlAGVAZYBlAFSAJUBlwGYAZkBlwGeAJgBUwBUAJoBUwBWAFQAmwEvADAAmwGcAS8AnQGFAIYAnQGeAYUAnwFQAKABnwGhAVAAlACiAaMBlABBAKIBpAGWAJcApAGVAJYAkwClAaYBkwCnAaUBqAGpAaoBqAGrAakBrAGtAUAArAGuAa0BrwGwAbEBrwGyAbABswG0AbUBswG2AbQBtwG4AbkBtwGYALgBugG7AX0AugG8AbsBvQG+AVEAvQG/Ab4BwAHBAS4AwAHCAcEBwwExADIAwwGHADEAVwDEAVUAVwDFAcQBxgHHAcgBxgHJAccBygHLAcwBygHNAcsBTwDOAZ8ATwDPAc4BKwDQAdEBKwDSAdABeQDTAdQBeQDVAdMB1gF7AAgA1gHXAXsA2AHZAdoB2AHbAdkB3AHdAd4B3AHfAd0B"),
"lods": [0.10728674, PackedByteArray("XgATAF8AXgAUABMAYABeAF8AYABfABIAYQBgABIAYQASAA0AEQBgAGEADABhAA0ADAANAA4AYgAMAA4AYgAOABAADwBiABAAYwBhAAwAYwARAGEAYwAMAGQAFwBjAGQAGABjABcAGAAVAGMAEQBlAGYAEQBnAGUAZwAWAGUAFgAUAGUAFgAZABQAGgAZABYAGgAbABkAaAAaABYAaAAWAGkAagBoAGkAagBpABwAawBqABwAawAcAGwAFQBrAGwAbQAKAAIAbQBuAAoACQBuAG0ACQALAG4ACQBvAAsAbwAHAAsAcABxAAIAAwBxAHAAcgADAHAAcgBwAHMAdAByAHMAdABzAAEAAQBzAHUAdQB2AAEAdQB3AHYAdgB3AHgABAB3AHUAdgB4AHkABAB1AAAABQAEAAAABQAGAAQAeQB4AHoAeQB6AAgACAB6AHsAegAHAHsAXQBbAHwAfABbAFkAWwBcAFkAXQB8AH0AfABZAH0AXQB9AFgAfQBZAFoAfgB/AB8AfgCAAH8AgAAgAH8AHQCAAH4AgAAeACAAHQCBAIAAgQAeAIAAggAoAIMAhACCAIMAhACDAIUAhACFAIYAhgCFAC8AhgAvADAALgCEAIYAKwCCAIQAKwCEAC4AKwAqAIIAKgAoAIIAKgAmACgALgCHADEALgAxADIAJgAtAIgAJgAsAC0AJgCJACgAKACJAIoAKACKAIsAiQAnAIoAiQApACcAIQAiACMAIQCMACIAJQCMACEAJQAkAIwAMwA0ADUANQA0ADYANwA0ADMAOAA3ADMAOAA5ADcATQCNAEwASwBMAI0ASwBOAEwAjgBFAEQAjwBFAI4AjwCQAEUAkQCQAI8AkQA/AJAAkgA/AJEAkgA+AD8AQACSAJEAOgA+AJIAOgA8AD4APQA8ADoAPQA7ADwAkwA6AJIAkwCSAEAAkwBBADoAlABBAJMAQgCUAJMAQgCTAEMAQACVAJYAQACWAJcAlwCWAJgAlwCYAEYARgCYAEQARgBEAEcASABGAEcASABHAEkAmQBGAEgAmQCaAEYAmwCaAJkAmwBKAJoAnABKAJsAnACdAEoAQwCdAJwATwCeAJ8ATwBSAJ4AnwCeAFAAnwBQAFEAUwBUAFUAUwBWAFQAVwBTAFUA"), 0.5137071, PackedByteArray("AAABAAIAAQADAAIAAAAEAAEABQAEAAAABQAGAAQAAQAEAAcAAQAHAAgACQAKAAIACQAHAAsACQALAAoADAANAA4ADwAMAA4ADwAOABAADAARAA0AEQASAA0AEQATABIAEQAUABMAFQARAAwAEQAWABQAFQAMABcAGAAVABcAFgAZABQAGgAZABYAGgAbABkAGgAWABwAGgAcABUAHQAeAB8AHgAgAB8AIQAiACMAIQAkACIAJQAkACEAJgAnACgAJgApACcAKgAmACgAKwAqACgAJgAsAC0AKwAoAC4ALgAoAC8ALgAvADAALgAxADIAMwA0ADUANQA0ADYANwA0ADMAOAA3ADMAOAA5ADcAOgA7ADwAPQA7ADoAOgA8AD4AOgA+AD8AQAA6AD8AQABBADoAQgBBAEAAQgBAAEMAQAA/AEQARAA/AEUAQABEAEYARgBEAEcASABGAEcASABHAEkASABKAEYAQwBKAEgASwBMAE0ASwBOAEwATwBQAFEATwBSAFAAUwBUAFUAUwBWAFQAVwBTAFUAWABZAFoAWwBZAFgAWwBcAFkAXQBbAFgA")],
"material": SubResource("StandardMaterial3D_7gqng"),
"name": "Base",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 480,
"vertex_data": PackedByteArray("U/VzLxkOwdQEzlwHVkpnxgX2iSSz6pu6/3/2HNbxx7qrCnMvGQ4aABD0EUQ8A8HU7gsRRDwDGgD5CYkks+rWBv9/9hzW8X4A/3/2HNbxMwBa+fk///9wraQG+T///9oBHfQUpYdTCObm1wjt+4I84AnWe/XcU/zlWPL3kJMAF+lx4PG4JwE56U7/dmW3m3LhkeCHqaubUuf59iGCHP9b2KP4oWg5/uHXU/VzLxkOXtQI/wZVXOtG2Vjy95CTADHbEPQRRDwDXtZO+iJPVv0p1QX2iSSz6hLYWvn5P///Q9NO/3Zlt5sH0ZHgh6mrmxm/+fYhghz/ZrX/fyCvDaIzvv9/IYIc/+y2g86X9DqENaP/fyCvDaIwo/9/hPlNiB6jkeCHqaubE6Xm1wjt+4K8qAnWe/XcU23I/3+E+U2INr5DzdPdzyrbx4POl/Q6hDa+ceDxuCcBMMyNH/G4JwEiAubXCO37gjvAg86X9DqEOsD1KXv13FMeB/9/hPlNiJcAezGX9DqEmwB7MZf0OoTPCxgoCO37gtILTvoiT1b9I8D/fyGCHP/bP6P4oWg5/iPA+fYhghz/I8AFCSGCHP/bP7AFIk9W/ds/WwehaDn+2z/hCxSlh1MgNo0f8bgnAZ4z9Sl79dxTGDamDfeQkwCMMxgoCO37gmg6bR+HqaubbDSwAHZlt5u6NaYN95CTAFYp7gsRRDwDZyWrCnMvGQ6DJFsHoWg5/sc0BQkhghz/MDX2AAZVXOv5MLAFIk9W/TEt+QmJJLPq6C+kBvk///9NK7AAdmW3m0EmpAb5P///ID1O+iJPVv3ewlr5+T///97CsAUiT1b9ID1tH4epq5u2A/9/IYIc/zQABQkhghz/HQL/fyCvDaKyAHsxl/Q6hP8E/38grw2i3ARtH4epq5uiBP9/hPlNiGEEGCgI7fuCYxDuCxFEPAM2CI0f8bgnAWoBpg33kJMAagFY8veQkwCU/nHg8bgnAZT+EPQRRDwDJ/jy/3eEP9Wl56vxQKm01ZjnrvOag/6bXecl8NaZEX+Y4KvzH6S3JpnoQfmwaB4Po9ur8x+ktya53PL/d4Q/1eDcrvOag/6bMNwI/2FdP9X23AX2IBQ/1SXSCP9hXT/VZM8F9lwHHZsH0QX29hw7InfUQfmwaB4PQtRd2vYc1vFbpurc+T///1umoSX2HNbxMwAF9iAUP9VevV3a9hzW8ce6/38AAB2bZL0F9lwHHZtevf9/XAdWSu3ABfb2HDsiwcr/f1wHVkoeAPkJ9hw7Ih0A+QlcBx2bIgD/fwAAHZtKAfkJIBQ/1SIAoSX2HNbxnwCoz/1oAACU/tcK0GsAAH4B59EFqLKcM77/fy+kP9VltgjXbKKZ1WW2q/FAqbTVG7/1yQLM8w/Fzv9/093PKkwAuzLT3c8qRwD/f///3FMFALs1Yv3cUxYAuzVi/dxTswtDymL93FMywEPKYv3cU2vJ/3///9xTa8n/f9PdzypryefRBaiynEmj6tz5P///3sIAAM118OvTNgwAd4Q/1Zw0Uw5AqbTVlTRQDJqD/ptyNNkP1pkRf6k6vQawaB4PcS7XCtBrAABnKVAMmoP+m94uDAB3hD/VcS/2AGFdP9WDLwAAzXXw618u+QkgFD/V/Sf2AGFdP9XfJPkJXAcdm0Em+Qn2HDsioCS9BrBoHg9kJP9/L6Q/1RAAUw5AqbTVzwPNy/eQkwCU/jHL8bgnAZT+/3/3kJMAagH/f/G4JwFqAc008bgnAWoB/3/9aAAAagExNPeQkwBqAVYw/WgAAGoB///NdfDrF9mL95SWhOx22V3a9hzW8aKtBfaJJLPqXa7q3Pk///+TrQTO9hw7ImfGBfZcB1ZKZ8YF9vYcOyJnxv9/9hw7Ih4A+jFcB1ZKHgD6MfYcOyIeAPkJXAdWSh4A+Qn2HDsiHgCr8x+ktybs5ejZe9gMKtrlBM5cB1ZK/78F9lwHmX3/vwX2XAdWSv+/XdpcB5l9/78F9lwHHZv/v13aXAcdm/+/HfQUpYdTrOHm1wjt+4Kj4QnWe/XcU7fhJfDWmRF/l+GR4Iepq5vy4K7zmoP+m3ThXdogFD/VFLoF9iAUP9Ukul3a9hzW8Wm78v93hD/VcuGL95SWhOxa4avxQKm01YHh///NdfDrSeEI/wZVXOsB0wX2iSSz6gDXBfZcB5l9itFO/3Zlt5uK0Qj/V2PVfYrRBfZcBx2bitEF9lwHVkqe0Qj/V2PVfZ7RCP/2ZQ5LntEF9lwHmX2e0QX29hw7Ip3RCP/2ZQ5Lm9EI/+ZmHCOe0QX2XAdWSprRZdIRRDwDJ/gn9dBrAAAn+KjP/WgAACf4CP/mZhwjYNQl99KV8w+X6OjZe9gMKpfo1N5OxfMPleiS0HMvGQ7BylP1cy8ZDsHKBM72HDsiwcr/f3MvGQ4dAP9/9hw7Ih0A+jH2HDsiHQBsL3MvGQ4dAKsKcy8ZDh0ACP9hXT/VB9EF9iAUP9UH0V3aXAcdm169XdogFD/VXr1l0hFEPAPB1JLQcy8ZDsHU/38RRDwDGgD/f3MvGQ4aAGwvcy8ZDhoAmS0RRDwDGgDU3k7F8w8a6SX30pXzD/7oQfmwaB4PXdYn9dBrAABV1lP1cy8ZDmbWMcvxuCcBxc7/fwLM8w9IAP9/8bgnAUgAzTTxuCcBSAAJNgLM8w9IAP9/L6Q/1TO+CNdsopnVM771yQLM8w/bx/9/AszzD08ACTYCzPMPSgD/fyJPVv0gPaXdIk9W/d7C/3/5P///ID0UI/k///8gPVkiIk9W/SA9/38ukYTsZbaI262PhOxltkPKYv3cUza+/3///9xTNr5DzdPdzypryYjbrY+E7Oy2/38ukYTs7LYY2yGCHP/stl7coWg5/iPAGNshghz/I8Cl3SJPVv0jwP9/oWg5/ts//38iT1b92z9ZIiJPVv3bP6AjoWg5/ts/5iQhghz/2z8n9dBrAABE2yX30pXzD0rbQfmwaB4PW9tO/3Zlt5tI3KvzH6S3JpbbJffSlfMPxtsI/+ZmHCN52wj/YV0/1XjU///NdfDreNTy/3eEP9V41Aj/BlVc63jUCP9XY9V9ZeGu85qD/ptt4SXw1pkRf2HhCP/2ZQ5LWN0l8NaZEX9r3R30FKWHU03dCP9XY9V9dN0I/+ZmHCO53B30FKWHU7rcCP/2ZQ5LutwI/wZVXOuJ0aP4oWg5/tjR///NdfDrX9FO+iJPVv0N0qjP/WgAAJH+WPL3kJMAkf7Ny/eQkwCR/if10GsAAJH+i/eUloTscrUY2yGCHP9utYjbrY+E7Hy16Nl72AwqGMhDymL93FNiyEPN093PKhDICdZ79dxTM8Dn0QWospxOpYPOl/Q6hIqpq/FAqbTVKbaI262PhOwotgjXbKKZ1Sq2i/eUloTsKLbU3k7F8w87yEPN093PKhDI9ckCzPMPSsjo2XvYDCoEyAjXbKKZ1Ru/59EFqLKcGL/1yQLM8w8szDHL8bgnATfM1N5OxfMPJ8xd2iAUP9VkvV3aXAcdm2S9/3/DDD/VZL3/fxFEPANTCKjP/WgAAKz3/3/9aAAAUwhl0hFEPAOs91Yw/WgAAFMImS0RRDwDUwj/f8MMP9XHul3aIBQ/1ci6/38AAJl9BMBd2lwHHZsEwF3aXAeZfQTA/38AAB2bBMBd2lwHmX3twATOXAdWSu3A/38AAJl97cD/f/k///8zABQj+T///zMAAADNdfDr0DVzCJSWhOwfNqEl9hzW8TQEFCP5P///rQP5CYkks+p5CFMMH6S3Jg82FiZ72AwqBDb6MVwHVkohAPkJXAeZfSEAoSVcB5l9IQD5CVwHVkohAPkJXAcdmyEAoSVcBx2bIQDhCxSlh1PZNhgoCO37gtI22Q/WmRF/yjb1KXv13FPhNm0fh6mrm+c6UAyag/6bQTuhJSAUP9X5AaEl9hzW8ZkK+QkgFD/V+QIMAHeEP9XwNnMIlJaE7N82Uw5AqbTV+jb2AAZVXOvpKPkJiSSz6uos+QlcB5l9oCawAHZlt5ugJvkJXAcdm6Am9gBXY9V9oCb5CVwHVkqvJvYAV2PVfa8m+QlcB5l9ryb2APZlDkuvJvkJ9hw7Iv0l9gD2ZQ5L/CX5CVwHVkr6JfYA5mYcI/8lmS0RRDwDNgjXCtBrAAA2CFYw/WgAADYI9gDmZhwjhSTZCNKV8w+nNhYme9gMKqg2UwwfpLcmqTYqIU7F8w+mNvYAYV0/1UEm+QkgFD/VQSahJVwHHZsiAKElIBQ/1SIAKiFOxfMPjTPZCNKV8w99M70GsGgeD2YlqwpzLxkObyXXCtBrAABdJRcuBaiynKgA/38vpD/VpQD2KGyimdWcAPYobKKZ1RAA/38ukYTsEAB2JK2PhOwRABcuBaiynHYFuzVi/dxTlQD/f///3FORALsy093PKgMA/3/T3c8qDAB2JK2PhOw9AOYkIYIc/0IA/38ukYTsLwDZCNKV8w9tKb0GsGgeD3wpsAB2Zbeb8i5TDB+ktyZlLvYA5mYcI0wu2QjSlfMPji72AGFdP9VyKQAAzXXw63Ip9gAGVVzrcikMAHeEP9VyKfYAV2PVfbA1UAyag/6btjXZD9aZEX+uNfYA9mUOS1gz2Q/WmRF/ZzP2AFdj1X1vM+ELFKWHU1Az9gDmZhwjPDHhCxSlh1M8MfYA9mUOSzwxUwwfpLcmPDH2AAZVXOuJLlsHoWg5/tgusAUiT1b9DC9WMP1oAAB+AaYN95CTAH4BMTT3kJMAfgFzCJSWhOzbAuYkIYIc/54CdiStj4TsXgMWJnvYDCrrBLs1Yv3cU94GuzLT3c8qqAT1KXv13FO1CxcuBaiynAgGezGX9DqEDRJTDkCptNUsBXYkrY+E7CcFcwiUloTsIQX2KGyimdUyBSohTsXzD3AEuzLT3c8qgAIWJnvYDCqqAQk2AszzD/AE9ihsopnVzQMXLgWospyyAwk2AszzD9sBKiFOxfMPYAHNNPG4JwGYAqElIBQ/1UoB/3/DDD/VSgGhJVwHHZtKAf9/www/1ZAAoSUgFD/VsgD/fwAAmX1AAaElXAcdm0AB/38AAB2bQAGhJVwHmX1AAf9/XAdWSpsAoSVcB5l9mgD/fwAAmX2ZAPoxXAdWSpwAgwCsf4gAtX8kIjZq8wHmfMt/dS+DAKx/y391L7Bz+UqKxBH/4H/eVMIbqmindY9T3TNzGjIvSxroM2ka8zawGdM2zhnlMEQdnTUtGs0rkyA6LFAgkyn3MIIYWjaKLncp6CpkLxsdsjTTGeE1Vx/jM98nFjAE+naNXvuridP7XH36/nl+Zejjd5Tornc86fF2oN0sasTTQXqP5BRwFvxlfVD/wX4W/G19aPZFeol8mccu2lxtLtpXbcp1dsCyfvO9t371vTJ0Crk1dAy5QnlCeUJ5QnlCeUJ5QnlCeUJ5QnlCeUJ5QnlCeU7f5L/V36q7Xt/gvwfgnbvy33jGs9/avUvdBcYr1e3PAdJb1nLRediZ3IvPFty1z1fFjOVjymLi2caa5KPM+eDM0oXauZa5lrmWuZa5lrmWuZa5lpg9NwNbx3QApjYjAq1+7r32fBGn5HwJpxd3NaalfO+mJ311qec7H8TEwDc/xMA3P8fAOj/HwDo/sTtFxFE1chpdNWcakzU2GuouhRqTNVYYaS4yJc8uhSK0Lk8kci/UI50uXiT4IlczwCbpMd8nFjBtKQgxvCnkMAwBpH8MAaR/4H/eVJcAtn+vAd18IgMIepcAtn/YAdp8hQC0f9d/CjvUf5g33H8hQtLCbP7cfyFCe8Qx/8fAOj/GwDU/1PtHfaX+e36k/nl+Nfp3jTj/r34GumcAA7pgAPq4vgAIudYAGXT3uC3aKm2A/lN+qv6ffr/+2X7E55h4uZa5lhLe1MU/3/i9Ud/0vaTf3r2G347GBdgfzhHV+s822aPMVdj7zDrYBs0t2HrXxM523hnSXNzM0oXaUdGO2JjRYtjWx5kApj0dA8fAOj/HwDo/xMA3P8TANz/EwDc/xMA3P8TANz/EwDc/Jiv6INMqLSGSIt5mEy0ZZIQPjGeIALV/iAC1f4gAtX/Xfwo7138KO9d/CjvXfwo7138KO/YzXRoGNE8akQC2f5EAtn+RALZ/kQC2f5EAtn+RALZ/wjBqHMowYxy4MHEc1DBbHKQuvRo/Lg0bOhTOb9kHx3HvKq1mjTCCHKIwchyAMIwcsTBmHNohwzPwHJ81MyiWLzMoli8zKJYvMyiWL0Eogi9AKIIvQSiCL0Aogi8qKDowKyg5MCcoOzAtKDgwsDtExLE7RMSwO0TEkCn4MJU1VBiUNVUYljVTGIUAtH+FALR/hQC0f9R/mDfUf5g31H+YN9R/mDfUf5g33ycWMN8nFjCXALZ/lwC2f4MArH+DAKx/y391L8t/dS/Lf3Uvy391L/A2shkLN5kZ6SpkL/UqXi/dKmovOP+vfoq0dgCKtHYAirR2AIq0dgDU+0F91fsufUj/sn4JumsABbpkALmWuZa5lrmWuZa5lrmWuZa5lrmWpP56fqP+eX4W/GF9F/xZfa/+qX7p/lF+A/+MfuD+PX5CeUJ5QnlCeUJ5QnlCeUJ5QnlCeUJ5QnlCeUJ5QnlCeXIuhilqLoopVS6XKVgv5SN3LiklQy5JJZcuFSUeKg4sHSoOLB4qDiwdKg4s8DA7HeowQB30MDgd3S6sIMsuuCDnLqUgwi6+IM4uhSLOLoUizi6FImoo+CcXKB4olijjJ98nNyjSwC8/0sAvP9LALz/SwC8/vvwMik387Ymu/U6K1uPOa3rkl2/A40xrLdotbU3cVGyO0jp8y/iKksL4iJLV+IySufiGkjXs4XOI69pvYuztdD3rHW4w+neN/Pl2jT72mnmv9mV79PVweCIDCHoiAwh6IgMIeqQ7VcSpO1rEpDtVxKk7WsSkO1XEpDtVxM0B4XyJAdh8IwMzeiMDM3ojAzN6IwMzetkB2nzUAdp83AHafOB/3lTgf95USdv1z+HaFtA9dElUzdES+bpxlFVz39u/i9/Vv9t/EUDbfxFA238RQNt/EUDbfxFA238RQPLdkcX+3Y7FDd6KxeTdlMUc36PGhN7BxrZ32UivcI9MkMYI/N/d4cX83drFzN3mxbrNHt/QyDfi/NL42fzS+Nn80vjZ/NL42QPT4tkD0+LZA9Pi2QPT4tmQ0inaktIo2pPSJ9qO0ira6DsgxOg7H8ToOyDEcNF62BXh6rsU4eq7EeHruxfh6bvM0oXazNKF2tx/IULcfyFCA+Ceuyzgk7sC0lrW9tFh1g3SVNajfum9oH7nvZd+473Xx5kA18eaANfHmQA0fSqnsX7yvax+8L35uLsAWn8Rx17HfABgx4AAWcdwAAjV/s/x1AnQGNmvzBbYGM472AnO2tcwzpXUftaV1H7WldR+1pXUftZb3QDGUt0DxmDd/8Uj2yDLDNsoywDbK8sw2xzL1dlAzNXZQMzU2UDM1dlAzAHYjtet17XXddfO18bANT/GwDU/xsA1P/E2gwHZNrcBJjcVAU5zvb6BdUPABXOKvht0+bjHd5SmFX70qW82lANtNpkDajadA3E2kAOXeCXCSnaqwFF1CsAzeYrCpT0fA5U9OwMjfFvHc3vvxjR9A8jSwmz+0sJs/tLCbP6BxCP/csRD/8/AX/7PwF/+z8Bf/s/AX/7Avwz/wL8L/8G/Cf+/vw3/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_c3cc7")

[sub_resource type="BoxShape3D" id="BoxShape3D_1c4pg"]
size = Vector3(1.7, 0.5, 3.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ey22k"]
size = Vector3(1.6, 1.15, 1)

[node name="Car" type="RigidBody3D"]
mass = 50.0
script = ExtResource("1_6koi8")
accel_curve = ExtResource("2_ey22k")
handling_curve = ExtResource("3_ebsho")
total_wheels = 4
air_control = 30.0
metadata/_custom_type_script = "uid://3a3dj7jwmg1h"

[node name="mach1" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, 1.509958e-07, 0, 1, 0, -1.509958e-07, 0, -1, 0, 0.08, 0)
mesh = SubResource("ArrayMesh_s3wfk")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1c4pg")

[node name="Wheels" type="Node3D" parent="."]

[node name="WheelBR" parent="Wheels" instance=ExtResource("4_ufams")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 1.2)

[node name="WheelFR" parent="Wheels" instance=ExtResource("4_ufams")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, -1.2)
is_motor = true
is_steer = true
grip_curve = ExtResource("5_6koi8")

[node name="WheelBL" parent="Wheels" instance=ExtResource("4_ufams")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, 1.2)

[node name="WheelFL" parent="Wheels" instance=ExtResource("4_ufams")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, -1.2)
is_motor = true
is_steer = true
grip_curve = ExtResource("5_6koi8")

[node name="Lights" type="Node3D" parent="."]

[node name="Headlights" type="Node3D" parent="Lights"]

[node name="HeadlightR" type="SpotLight3D" parent="Lights/Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, -1.8)
visible = false
light_color = Color(0.93623257, 0.8513082, 0.6231731, 1)
light_energy = 16.0
shadow_bias = 0.0
shadow_opacity = 0.6
spot_range = 80.0

[node name="HeadlightL" type="SpotLight3D" parent="Lights/Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, -1.8)
visible = false
light_color = Color(0.93623257, 0.8513082, 0.6231731, 1)
light_energy = 16.0
shadow_bias = 0.0
shadow_opacity = 0.6
spot_range = 80.0

[node name="HeadlightR2" type="OmniLight3D" parent="Lights/Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, -1.8968852)
visible = false
light_color = Color(0.93623257, 0.8513082, 0.6231731, 1)
light_energy = 0.5
shadow_bias = 2.0

[node name="HeadlightL2" type="OmniLight3D" parent="Lights/Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, -1.8968852)
visible = false
light_color = Color(0.93623257, 0.8513082, 0.6231731, 1)
light_energy = 0.5
shadow_bias = 2.0

[node name="Taillights" type="Node3D" parent="Lights"]

[node name="TaillightR" type="OmniLight3D" parent="Lights/Taillights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.67327726, 0.1458872, 1.8895168)
visible = false
light_color = Color(0.94, 0.30581334, 0.1128, 1)
light_energy = 0.4
shadow_bias = 2.0

[node name="TaillightL" type="OmniLight3D" parent="Lights/Taillights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.67327726, 0.1458872, 1.8895168)
visible = false
light_color = Color(0.94, 0.30581334, 0.1128, 1)
light_energy = 0.4
shadow_bias = 2.0

[node name="Running" type="Node3D" parent="Lights"]

[node name="TaillightR2" type="OmniLight3D" parent="Lights/Running"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.67327726, 0.1458872, 1.8895168)
visible = false
light_color = Color(0.94, 0.30581334, 0.1128, 1)
light_energy = 0.1
shadow_bias = 2.0

[node name="TaillightL2" type="OmniLight3D" parent="Lights/Running"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.67327726, 0.1458872, 1.8895168)
visible = false
light_color = Color(0.94, 0.30581334, 0.1128, 1)
light_energy = 0.1
shadow_bias = 2.0

[node name="Doors" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="DoorL" type="CollisionShape3D" parent="Doors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3, 0, 0)
shape = SubResource("BoxShape3D_ey22k")

[node name="DoorR" type="CollisionShape3D" parent="Doors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3, 0, 0)
shape = SubResource("BoxShape3D_ey22k")

[node name="DoorLabel" type="Label3D" parent="Doors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0078381, 0)
visible = false
pixel_size = 0.01
billboard = 2
text = "Press E to drive"

[node name="CameraMount" type="Node3D" parent="."]

[node name="CarCamera" type="Camera3D" parent="CameraMount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 3)
top_level = true
script = ExtResource("7_ebsho")

[node name="CameraReset" type="Marker3D" parent="CameraMount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 3)
